--- a/project2.html
+++ b/project2.html
@@ -210,7 +210,7 @@
         <div class="clear-float"></div>
         <div class="image-grid">
         <div class="image-container">
-            <img src="proj2images/tan.jpg" alt="tann.jpg">
+            <img src="proj2images/tann.jpg" alt="tann.jpg">
             <p class="image-subtitle">Tan</p>
         </div>
         <div class="image-container">
