--- a/project2.html
+++ b/project2.html
@@ -224,6 +224,30 @@
         </div>
         <div class="clear-float"></div>
     </div>
+    <div class="image-grid">
+        <div class="image-container">
+            <img src="proj2images/grayscale_tan.jpg" alt="grayscale_tan.jpg">
+            <p class="image-subtitle">Tan FFT</p>
+        </div>
+        <div class="image-container">
+            <img src="proj2images/grayscale_twoface.jpg" alt="grayscale_two_face.jpg">
+            <p class="image-subtitle">Two-Face FFT</p>
+        </div>
+        <div class="image-container">
+            <img src="proj2images/filtered_tan.jpg" alt="filtered_tan.jpg">
+            <p class="image-subtitle">Tan FFT after low-pass filter</p>
+        </div>
+        <div class="image-container">
+            <img src="proj2images/filtered_two.jpg" alt="filtered_two.jpg">
+            <p class="image-subtitle">Two-Face FFT after high-pass filter</p>
+        </div>
+        <div class="image-container">
+            <img src="proj2images/hybrid.jpg" alt="hybrid.jpg">
+            <p class="image-subtitle">Two-Tan FFT</p>
+        </div>
+        </div>
+        <div class="clear-float"></div>
+    </div>
 </body>
 </html>
     </div>
