--- a/project2.html
+++ b/project2.html
@@ -247,6 +247,63 @@
         </div>
         </div>
         <div class="clear-float"></div>
+    <div class="image-gri">
+        <div class="image-container">
+            <img src="proj2images/hagi.jpg" alt="grayscale_tan.jpg">
+            <p class="image-subtitle">Gheorghe Hagi</p>
+        </div>
+        <div class="image-container">
+            <img src="proj2images/drogba.jpg" alt="grayscale_two_face.jpg">
+            <p class="image-subtitle">Didier Drogba</p>
+        </div>
+        <div class="image-container">
+            <img src="proj2images/drogba_mask.jpg" alt="filtered_tan.jpg">
+            <p class="image-subtitle">Mask</p>
+        </div>
+        <div class="image-container">
+            <img src="proj2images/drogba_hagi.png" alt="filtered_two.jpg">
+            <p class="image-subtitle">Didier Drogba & Gheorghe Hagi</p>
+        </div>
+        </div>
+        <div class="clear-float"></div>
+    <div class="image-gri">
+        <div class="image-container">
+            <img src="proj2images/spiderman.jpg" alt="grayscale_tan.jpg">
+            <p class="image-subtitle">Spiderman</p>
+        </div>
+        <div class="image-container">
+            <img src="proj2images/spidermeme.jpg" alt="grayscale_two_face.jpg">
+            <p class="image-subtitle">Spidermeme</p>
+        </div>
+        <div class="image-container">
+            <img src="proj2images/spideymask.jpg" alt="filtered_tan.jpg">
+            <p class="image-subtitle">Mask</p>
+        </div>
+        <div class="image-container">
+            <img src="proj2images/spidermeme_spiderman.png" alt="filtered_two.jpg">
+            <p class="image-subtitle">Spiderman Meme with Andrew Garfield!</p>
+        </div>
+        </div>
+        <div class="clear-float"></div>
+    <div class="image-gri">
+        <div class="image-container">
+            <img src="proj2images/pumpkin_750.jpg" alt="grayscale_tan.jpg">
+            <p class="image-subtitle">Pumpkin</p>
+        </div>
+        <div class="image-container">
+            <img src="proj2images/jokerr_750.jpg" alt="grayscale_two_face.jpg">
+            <p class="image-subtitle">Joker</p>
+        </div>
+        <div class="image-container">
+            <img src="proj2images/jokemask_750.jpg" alt="filtered_tan.jpg">
+            <p class="image-subtitle">Mask</p>
+        </div>
+        <div class="image-container">
+            <img src="proj2images/joker_pumpkin.png" alt="filtered_two.jpg">
+            <p class="image-subtitle">Early Halloween</p>
+        </div>
+        </div>
+        <div class="clear-float"></div>
     </div>
 </body>
 </html>
