--- a/project2.html
+++ b/project2.html
@@ -130,6 +130,25 @@
         <div class="clear-float"></div>
         <p> This time, I convolved with the derivative of Gaussian instead of convolving the image twice with partial derivatives and the Gaussian filter.</p>
         <p> The results are visibly the same because of convolution operation's associativity property. I used the same threshold for the binary gradient magnitude and obtained the same edge image. </p>
+                <div class="image-grid">
+            <div class="image-container">
+                <img src="proj2images/dog_dx.jpg" alt="im_blurred.jpg">
+                <p class="image-subtitle">Dx of DoG</p>
+            </div>
+            <div class="image-container">
+                <img src="proj2images/dog_dy.jpg" alt="im_blurred_dx.jpg">
+                <p class="image-subtitle">Dy of DoG</p>
+            </div>
+            <div class="image-container">
+                <img src="proj2images/dog_magnitude.jpg" alt="im_blurred_dy.jpg">
+                <p class="image-subtitle">Gradient Magnitude of DoG</p>
+            </div>
+            <div class="image-container">
+                <img src="proj2images/dog_gradient_magnitude.jpg" alt="im_blurred_magnitude.jpg">
+                <p class="image-subtitle"> Binarized Gradient Magnitude of DoG</p>
+            </div>
+        </div>
+        <div class="clear-float"></div>
         <div class="image-gri">
         <div class="image-container">
             <img src="proj2images/taj.jpg" alt="taj.jpg">
