--- a/project2.html
+++ b/project2.html
@@ -187,7 +187,7 @@
         </div>
         </div>
         <div class="clear-float"></div>
-        <p>When I attempted to sharpen an image after blurring it, I observed that sharpening process was not able to sharpen the blurred image to its original quality. Regardless of the value of the coefficient alpha, when an image is sharpened after being blurred, it becomes more noisy than the original and lose some of its details.</p>
+        <p>For evaluation, I attempted to sharpen an image after blurring it. I observed that sharpening process was not able to sharpen the blurred image to its original quality. Regardless of the value of the coefficient alpha, when an image is sharpened after being blurred, it becomes more noisy than the original and lose some of its details.</p>
         <div class="image-gri">
         <div class="image-container">
             <img src="proj2images/tt_arena.jpg" alt="tt_arena.jpg">
