--- a/project2.html
+++ b/project2.html
@@ -251,6 +251,7 @@
         </div>
         <div class="clear-float"></div>
     </div>
+    <p>Two-Tan was my favorite result so far. Here is its frequency analysis with Fourier transformation:</p>
     <div class="image-grid">
         <div class="image-container">
             <img src="proj2images/grayscale_tan.jpg" alt="grayscale_tan.jpg">
