--- a/project2.html
+++ b/project2.html
@@ -275,6 +275,22 @@
         </div>
         </div>
         <div class="clear-float"></div>
+    <p>For a failed one, I tried to make a hybrid of Gheorghe Hagi and Didier Drogba. Unfortunately, it wasn't very successful but I will use them for another technique again. </p>
+    <div class="image-grid">
+        <div class="image-container">
+            <img src="proj2images/hagi.jpg" alt="grayscale_tan.jpg">
+            <p class="image-subtitle">Gheorghe Hagi</p>
+        </div>
+        <div class="image-container">
+            <img src="proj2images/drogba.jpg" alt="grayscale_two_face.jpg">
+            <p class="image-subtitle">Didier Drogba</p>
+        </div>
+        <div class="image-container">
+            <img src="proj2images/failed.jpg" alt="filtered_tan.jpg">
+            <p class="image-subtitle">Failed</p>
+        </div>
+        </div>
+        <div class="clear-float"></div>
     <div class="image-gri">
         <div class="image-container">
             <img src="proj2images/hagi.jpg" alt="grayscale_tan.jpg">
