--- a/project2.html
+++ b/project2.html
@@ -83,7 +83,7 @@
         <h2>Part 1: Fun with Filter</h2>
             <h2>Part 1.1: Finite Difference Operator</h2>
             <p>In order to calculate partial derivatives, I used finite difference kernels. Dx kernel is created by np.array([[1, -1]]) and Dy kernel is created bynp.array([[1], [-1]]. By convolving the image with these finite difference kernels, I have obtained the partial derivatives in horizontal and vertical directions. To form the gradient magnitude image, I used scipy.sqrt(dx ** 2 + dy ** 2). In order to binarize the gradient magnitude, I have chosen a threshold of 0.29 per pixel.</p>
-            <div class="image-gri">
+            <div class="image-grid">
             <div class="image-container">
                 <img src="proj2images/d_x.jpg" alt="d_x.jpg">
                 <p class="image-subtitle">d_x</p>
