--- a/project2.html
+++ b/project2.html
@@ -286,7 +286,7 @@
             <p class="image-subtitle">Didier Drogba</p>
         </div>
         <div class="image-container">
-            <img src="proj2images/failed.jpg" alt="filtered_tan.jpg">
+            <img src="proj2images/fail.jpg" alt="filtered_tan.jpg">
             <p class="image-subtitle">Failed</p>
         </div>
         </div>
