--- a/project2.html
+++ b/project2.html
@@ -291,6 +291,20 @@
         </div>
         </div>
         <div class="clear-float"></div>
+    <h2>Gaussian and Laplacian Stacks"</h2>
+            <p>For this part, my goal is to blend images. In order to blend, I created Gaussian stacks and Laplacian stacks for the images. The Laplacian stacks are formed by substracting the consecutive images in their Gaussian stacks. The last level of the Laplacian stack is the last level of the Gaussian stack so the Laplacian and Gaussian stacks have the same number of levels. </p>
+        <div class="clear-float"></div>
+        <div class="image-gri">
+        <div class="image-container">
+            <img src="proj2images/taj.jpg" alt="taj.jpg">
+            <p class="image-subtitle">Taj Mahal</p>
+        </div>
+        <div class="image-container">
+            <img src="proj2images/taj_sharp.jpg" alt="taj_sharp.jpg">
+            <p class="image-subtitle">Sharpened Taj Mahal, alpha = 1</p>
+        </div>
+        </div>
+        <div class="clear-float"></div>
     <div class="image-gri">
         <div class="image-container">
             <img src="proj2images/hagi.jpg" alt="grayscale_tan.jpg">
