--- a/project2.html
+++ b/project2.html
@@ -321,6 +321,25 @@
         <div class="clear-float"></div>
     <div class="image-gri">
         <div class="image-container">
+            <img src="proj2images/blended_result.png" alt="taj.jpg">
+            <p class="image-subtitle">Oraple!</p>
+        </div>
+        <div class="image-container">
+            <img src="proj2images/blend_levels.jpg" alt="taj_sharp.jpg">
+            <p class="image-subtitle">Blend Levels</p>
+        </div>
+        <div class="image-container">
+            <img src="proj2images/gauss_orange.jpg" alt="taj.jpg">
+            <p class="image-subtitle">Gauss stack for orange</p>
+        </div>
+        <div class="image-container">
+            <img src="proj2images/laplace_orange.jpg" alt="taj_sharp.jpg">
+            <p class="image-subtitle">Laplace stack for orange</p>
+        </div>
+        </div>
+        <div class="clear-float"></div>
+    <div class="image-gri">
+        <div class="image-container">
             <img src="proj2images/hagi.jpg" alt="grayscale_tan.jpg">
             <p class="image-subtitle">Gheorghe Hagi</p>
         </div>
