--- a/project2.html
+++ b/project2.html
@@ -317,7 +317,7 @@
             <img src="proj2images/laplace_orange.jpg" alt="taj_sharp.jpg">
             <p class="image-subtitle">Laplace stack for orange</p>
         <div class="image-container">
-            <img src="proj2images/blended_result.png" alt="taj.jpg">
+            <img src="proj2images/blended.jpg" alt="taj.jpg">
             <p class="image-subtitle">Oraple!</p>
         </div>
         <div class="image-container">
