--- a/project2.html
+++ b/project2.html
@@ -321,7 +321,7 @@
             <p class="image-subtitle">Oraple!</p>
         </div>
         <div class="image-container">
-            <img src="proj2images/blend_levels.jpg" alt="taj_sharp.jpg">
+            <img src="proj2images/blend_level.jpg" alt="taj_sharp.jpg">
             <p class="image-subtitle">Blend Levels</p>
         </div>
         </div>
