--- a/project2.html
+++ b/project2.html
@@ -46,6 +46,8 @@
             grid-template-columns: repeat(1, 1fr);
             gap: 15px;
             margin-bottom: 20px;
+            justify-items: center; 
+            align-items: center; 
         }
         .image-g {
             display: grid;
