--- a/project2.html
+++ b/project2.html
@@ -310,27 +310,27 @@
         <h2>Apple Gauss Stack</h2>
 <div class="image-g">
     <div class="image-container">
-        <img src="gauss_app0.jpg" alt="Apple Gauss Level 0">
+        <img src="proj2images/gauss_app0.jpg" alt="Apple Gauss Level 0">
         <p class="image-subtitle">Level 0</p>
     </div>
     <div class="image-container">
-        <img src="gauss_app1.jpg" alt="Apple Gauss Level 1">
+        <img src="proj2images/gauss_app1.jpg" alt="Apple Gauss Level 1">
         <p class="image-subtitle">Level 1</p>
     </div>
     <div class="image-container">
-        <img src="gauss_app2.jpg" alt="Apple Gauss Level 2">
+        <img src="proj2images/gauss_app2.jpg" alt="Apple Gauss Level 2">
         <p class="image-subtitle">Level 2</p>
     </div>
     <div class="image-container">
-        <img src="gauss_app3.jpg" alt="Apple Gauss Level 3">
+        <img src="proj2images/gauss_app3.jpg" alt="Apple Gauss Level 3">
         <p class="image-subtitle">Level 3</p>
     </div>
     <div class="image-container">
-        <img src="gauss_app4.jpg" alt="Apple Gauss Level 4">
+        <img src="proj2images/gauss_app4.jpg" alt="Apple Gauss Level 4">
         <p class="image-subtitle">Level 4</p>
     </div>
     <div class="image-container">
-        <img src="gauss_app5.jpg" alt="Apple Gauss Level 5">
+        <img src="proj2images/gauss_app5.jpg" alt="Apple Gauss Level 5">
         <p class="image-subtitle">Level 5</p>
     </div>
 </div>
@@ -338,27 +338,27 @@
 <h2>Apple Laplace Stack</h2>
 <div class="image-g">
     <div class="image-container">
-        <img src="lap_app0.jpg" alt="Apple Laplace Level 0">
+        <img src="proj2images/lap_app0.jpg" alt="Apple Laplace Level 0">
         <p class="image-subtitle">Level 0</p>
     </div>
     <div class="image-container">
-        <img src="lap_app1.jpg" alt="Apple Laplace Level 1">
+        <img src="proj2images/lap_app1.jpg" alt="Apple Laplace Level 1">
         <p class="image-subtitle">Level 1</p>
     </div>
     <div class="image-container">
-        <img src="lap_app2.jpg" alt="Apple Laplace Level 2">
+        <img src="proj2images/lap_app2.jpg" alt="Apple Laplace Level 2">
         <p class="image-subtitle">Level 2</p>
     </div>
     <div class="image-container">
-        <img src="lap_app3.jpg" alt="Apple Laplace Level 3">
+        <img src="proj2images/lap_app3.jpg" alt="Apple Laplace Level 3">
         <p class="image-subtitle">Level 3</p>
     </div>
     <div class="image-container">
-        <img src="lap_app4.jpg" alt="Apple Laplace Level 4">
+        <img src="proj2images/lap_app4.jpg" alt="Apple Laplace Level 4">
         <p class="image-subtitle">Level 4</p>
     </div>
     <div class="image-container">
-        <img src="lap_app5.jpg" alt="Apple Laplace Level 5">
+        <img src="proj2images/lap_app5.jpg" alt="Apple Laplace Level 5">
         <p class="image-subtitle">Level 5</p>
     </div>
 </div>
@@ -366,27 +366,27 @@
 <h2>Orange Gauss Stack</h2>
 <div class="image-g">
     <div class="image-container">
-        <img src="gauss_or0.jpg" alt="Orange Gauss Level 0">
+        <img src="proj2images/gauss_or0.jpg" alt="Orange Gauss Level 0">
         <p class="image-subtitle">Level 0</p>
     </div>
     <div class="image-container">
-        <img src="gauss_or1.jpg" alt="Orange Gauss Level 1">
+        <img src="proj2images/gauss_or1.jpg" alt="Orange Gauss Level 1">
         <p class="image-subtitle">Level 1</p>
     </div>
     <div class="image-container">
-        <img src="gauss_or2.jpg" alt="Orange Gauss Level 2">
+        <img src="proj2images/gauss_or2.jpg" alt="Orange Gauss Level 2">
         <p class="image-subtitle">Level 2</p>
     </div>
     <div class="image-container">
-        <img src="gauss_or3.jpg" alt="Orange Gauss Level 3">
+        <img src="proj2images/gauss_or3.jpg" alt="Orange Gauss Level 3">
         <p class="image-subtitle">Level 3</p>
     </div>
     <div class="image-container">
-        <img src="gauss_or4.jpg" alt="Orange Gauss Level 4">
+        <img src="proj2images/gauss_or4.jpg" alt="Orange Gauss Level 4">
         <p class="image-subtitle">Level 4</p>
     </div>
     <div class="image-container">
-        <img src="gauss_or5.jpg" alt="Orange Gauss Level 5">
+        <img src="proj2images/gauss_or5.jpg" alt="Orange Gauss Level 5">
         <p class="image-subtitle">Level 5</p>
     </div>
 </div>
@@ -394,27 +394,27 @@
 <h2>Orange Laplace Stack</h2>
 <div class="image-g">
     <div class="image-container">
-        <img src="lap_or0.jpg" alt="Orange Laplace Level 0">
+        <img src="proj2images/lap_or0.jpg" alt="Orange Laplace Level 0">
         <p class="image-subtitle">Level 0</p>
     </div>
     <div class="image-container">
-        <img src="lap_or1.jpg" alt="Orange Laplace Level 1">
+        <img src="proj2images/lap_or1.jpg" alt="Orange Laplace Level 1">
         <p class="image-subtitle">Level 1</p>
     </div>
     <div class="image-container">
-        <img src="lap_or2.jpg" alt="Orange Laplace Level 2">
+        <img src="proj2images/lap_or2.jpg" alt="Orange Laplace Level 2">
         <p class="image-subtitle">Level 2</p>
     </div>
     <div class="image-container">
-        <img src="lap_or3.jpg" alt="Orange Laplace Level 3">
+        <img src="proj2images/lap_or3.jpg" alt="Orange Laplace Level 3">
         <p class="image-subtitle">Level 3</p>
     </div>
     <div class="image-container">
-        <img src="lap_or4.jpg" alt="Orange Laplace Level 4">
+        <img src="proj2images/lap_or4.jpg" alt="Orange Laplace Level 4">
         <p class="image-subtitle">Level 4</p>
     </div>
     <div class="image-container">
-        <img src="lap_or5.jpg" alt="Orange Laplace Level 5">
+        <img src="proj2images/lap_or5.jpg" alt="Orange Laplace Level 5">
         <p class="image-subtitle">Level 5</p>
     </div>
 </div>
