--- a/project2.html
+++ b/project2.html
@@ -419,7 +419,7 @@
     </div>
 </div>
     <div class="clear-float"></div>
-        <div class="image-gr">
+        <div class="image-gri">
         <div class="image-container">
             <img src="proj2images/blended.jpg" alt="taj.jpg">
             <p class="image-subtitle">Oraple!</p>
