--- a/project2.html
+++ b/project2.html
@@ -419,6 +419,7 @@
     </div>
 </div>
     <div class="clear-float"></div>
+    <h2>Oraple</h2>
         <div class="image-gri">
         <div class="image-container">
             <img src="proj2images/blended.jpg" alt="taj.jpg">
@@ -432,6 +433,7 @@
         <div class="clear-float"></div>
     <h2>Part 2.4: Multiresolution Blending</h2>
     <p>In order to blend, I used Laplacian stacks of the images and the Gaussian stack for the mask. We apply Gaussian filter to the mask at each layer so that blending is smoother. After creating the Laplacian stack for the images and Gaussian stack for the mask, I create a blend stack for the images with merging them by mask_gauss[i] * apple_laplace[i] + (1 - mask_gauss[i]) * orange_laplace[i]. Mask is applied to one of the images, and 1-mask is applied to another. After having a stack of blends, I collapse them to achieve a final blend of the images.</p>
+    <h2>Hagi & Drogba</h2>
     <div class="image-gri">
         <div class="image-container">
             <img src="proj2images/hagi.jpg" alt="grayscale_tan.jpg">
@@ -451,6 +453,7 @@
         </div>
         </div>
         <div class="clear-float"></div>
+    <h2>Spidermeme Recreation</h2>
     <div class="image-gri">
         <div class="image-container">
             <img src="proj2images/spiderman.jpg" alt="grayscale_tan.jpg">
@@ -470,6 +473,7 @@
         </div>
         </div>
         <div class="clear-float"></div>
+    <h2>Early Halloween</h2>
     <div class="image-gri">
         <div class="image-container">
             <img src="proj2images/pumpkin_750.jpg" alt="grayscale_tan.jpg">
