--- a/project2.html
+++ b/project2.html
@@ -450,7 +450,7 @@
         </div>
         <div class="image-container">
             <img src="proj2images/drogba_hagi.png" alt="filtered_two.jpg">
-            <p class="image-subtitle">Didier Drogba & Gheorghe Hagi</p>
+            <p class="image-subtitle">Didier Drogba & Gheorghe Hagi (kernel size = 24, sigma = 4, depth = 5)</p>
         </div>
         </div>
         <div class="clear-float"></div>
@@ -477,7 +477,7 @@
         </div>
         <div class="image-container">
             <img src="proj2images/spidermeme_spiderman.png" alt="filtered_two.jpg">
-            <p class="image-subtitle">Spiderman Meme with Andrew Garfield!</p>
+            <p class="image-subtitle">Spiderman Meme with Andrew Garfield! (kernel size = 24, sigma = 4, depth = 5)</p>
         </div>
         </div>
         <div class="clear-float"></div>
@@ -497,7 +497,7 @@
         </div>
         <div class="image-container">
             <img src="proj2images/joker_pumpkin.png" alt="filtered_two.jpg">
-            <p class="image-subtitle">Early Halloween</p>
+            <p class="image-subtitle">Early Halloween (kernel size = 24, sigma = 4, depth = 5)</p> 
         </div>
         </div>
         <div class="clear-float"></div>
